# llmsim

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IDEA.md  LICENSE  PLAN.md  README.md  deny.toml  docker-compose.yml  justfile  package-lock.json  plan.md
.claude/commands/: ship.md
.claude/hooks/: fix-git-identity.sh
.claude/skills/load-test/: SKILL.md  skill.md
.claude/skills/maintenance/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: README.md  run-benchmark.sh  smoke-test.sh  throughput.sh
benchmarks/config/: benchmark.toml  benchmark.yaml  chaos.toml  chaos.yaml  throughput.toml
benchmarks/k6/: chat-completions.js  config.js  endpoints.js  high-concurrency.js
crates/llmsim/: Cargo.toml
crates/llmsim-server/src/: config.rs  handlers.rs  state.rs
crates/llmsim/src/: stream.rs
docs/: api.md  llmsim.cast  llmsim.webm
examples/: README.md  anthropic_client.py  anthropic_curl.sh  anthropic_langchain.py  basic_usage.rs  images_client.py  langchain_client.py  langchain_responses_client.py  list_models.py  openai_client.py  openai_client.ts  openai_websocket_client.py  openresponses_client.py  package-lock.json  pydantic_ai_client.py  responses_client.py  responses_usage.rs  scripted_demo.json  scripted_demo.py  scripted_demo.rs  scripted_demo.toml  websocket_client.py
examples/go/: anthropic_client.go  go.mod
examples/node/: anthropic_client.ts  images_client.ts  openai_client.ts  package-lock.json  package.json  vercel_ai_client.ts
examples/scripted_demo/: main.rs  scripted_demo.py  scripted_demo.toml
llmsim-server/: Cargo.toml
llmsim-server/src/: config.rs  main.rs
llmsim/src/: errors.rs  generator.rs  latency.rs  lib.rs  tokens.rs
scripts/lib/: common.sh
specs/: anthropic-api.md  api-endpoints.md  architecture.md  image-generation.md  load-testing.md  maintenance.md  release-process.md  responses-api.md  scripted-mode.md  throughput-benchmark.md
src/: errors.rs  generator.rs  ids.rs  image_stream.rs  imagegen.rs  latency.rs  lib.rs  main.rs  responses_stream.rs  script.rs  script_stream.rs  stats.rs  stream.rs  tokens.rs
src/anthropic/: mod.rs  models.rs  stream.rs  types.rs
src/cli/: anthropic_handlers.rs  config.rs  handlers.rs  mod.rs  state.rs  ws_handler.rs
src/openai/: images.rs  mod.rs  models.rs  responses.rs  types.rs  websocket.rs
src/openresponses/: mod.rs  stream.rs  types.rs
src/tui/: app.rs  mod.rs  ui.rs
tests/: anthropic_test.rs  images_test.rs  integration_test.rs  scripted_test.rs  smoke_test.sh  websocket_test.rs
