[package]
name = "llmsim"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["LLMSim Contributors"]
repository = "https://github.com/chaliy/llmsim"
description = "LLM Traffic Simulator - A lightweight, high-performance LLM API simulator"
readme = "README.md"
keywords = ["llm", "openai", "simulator", "mock", "testing"]
categories = ["development-tools::testing", "simulation", "web-programming::http-server"]

[lib]
name = "llmsim"
path = "src/lib.rs"

[[bin]]
name = "llmsim"
path = "src/main.rs"

[features]
default = []
tui = ["dep:crossterm", "dep:ratatui", "tokio/io-util"]

[dependencies]
# Async runtime
tokio = { version = "1.52", default-features = false, features = ["macros", "rt-multi-thread", "net", "signal", "time"] }

# HTTP framework
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "ws"] }
tower-http = { version = "0.6", default-features = false, features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

# Token counting
tiktoken-rs = "0.11"

# Random numbers
rand = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.6", features = ["derive", "env"] }

# Utilities
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
async-stream = "0.3"
thiserror = "2.0"

# TUI
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tokio-tungstenite = "0.29"
tower = { version = "0.5", features = ["util"] }
