[package]
name = "llmsim-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "HTTP server binary for LLM traffic simulation"

[[bin]]
name = "llmsim-server"
path = "src/main.rs"

[dependencies]
llmsim = { path = "../llmsim" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
