[package]
name = "llmsim"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for LLM traffic simulation"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tiktoken-rs = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
